# kyle-translator

./: .env.example  .gitignore  README.md  out.csv  out.json  pyproject.toml  requirements.txt  sample_words.txt
kyle_translator/: __init__.py  cli.py  config.py  models.py  orchestrator.py  scoring.py
kyle_translator.egg-info/: SOURCES.txt  top_level.txt
kyle_translator/providers/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  openai_provider.py
tests/: test_pipeline.py
