[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kyle-translator"
version = "0.1.0"
description = "Translation confidence aggregator using multiple LLM providers"
authors = [{ name = "Kyle" }]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["kyle_translator"]
